--- a/laptimesim/input/vehicles/FE_Berlin.ini
+++ b/laptimesim/input/vehicles/FE_Berlin.ini
@@ -42,35 +42,35 @@ veh_pars={"powertrain_type": "electric",
           "general": {"lf": 1.906,
                       "lr": 1.194,
                       "h_cog": 0.345,
-                      "sf": 1.3,
-                      "sr": 1.3,
-                      "m": 880.0,
-                      "f_roll": 0.02,
-                      "c_w_a": 1.15,
-                      "c_z_a_f": 1.24,
-                      "c_z_a_r": 1.52,
+                      "sf": 1.9,
+                      "sr": 1.9,
+                      "m": 2400.0,
+                      "f_roll": 0.03,
+                      "c_w_a": 0.6,
+                      "c_z_a_f": 0.0,
+                      "c_z_a_r": 0.0,
                       "g": 9.81,
                       "rho_air": 1.18,
                       "drs_factor": 0.0},
-          "engine": {"topology": "RWD",
-                     "pow_e_motor": 200e3,
+          "engine": {"topology": "AWD",
+                     "pow_e_motor": 300e3,
                      "eta_e_motor": 0.9,
                      "eta_e_motor_re": 0.9,
-                     "torque_e_motor_max": 150.0},
-          "gearbox": {"i_trans": [0.056, 0.091],
+                     "torque_e_motor_max": 400.0},
+          "gearbox": {"i_trans": [0.055, 0.15],
                       "n_shift": [19000.0, 19000.0],
                       "e_i": [1.04, 1.04],
                       "eta_g": 0.96},
-          "tires": {"f": {"circ_ref": 2.168,
-                          "fz_0": 2500.0,
+          "tires": {"f": {"circ_ref": 2.3,
+                          "fz_0": 4500.0,
                           "mux": 1.22,
                           "muy": 1.22,
                           "dmux_dfz": -2.5e-5,
                           "dmuy_dfz": -2.5e-5},
                     "r": {"circ_ref": 2.168,
                           "fz_0": 2500.0,
-                          "mux": 1.42,
-                          "muy": 1.42,
+                          "mux": 1.12,
+                          "muy": 1.12,
                           "dmux_dfz": -2.0e-5,
                           "dmuy_dfz": -2.0e-5},
                     "tire_model_exp": 2.0}}
