--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-numpy==1.18.1
-matplotlib==3.2.1
-trajectory_planning_helpers==0.66
-utm==0.5.0
-pytest==5.4.3
+numpy
+matplotlib
+trajectory_planning_helpers==0.76
+utm
+pytest
