more fine tuning and comments

--- a/laptimesim/input/vehicles/FE_Berlin.ini
+++ b/laptimesim/input/vehicles/FE_Berlin.ini
@@ -45,32 +45,35 @@ veh_pars={"powertrain_type": "electric",
                       "sf": 1.9,
                       "sr": 1.9,
                       "m": 2400.0,
-                      "f_roll": 0.03,
-                      "c_w_a": 0.6,
-                      "c_z_a_f": 0.0,
+                      "f_roll": 0.01, # according to COC
+                      "c_w_a": 0.51,  # 0,22 x 2,33m^2
+                      "c_z_a_f": 0.0, # kein Abtrieb
                       "c_z_a_r": 0.0,
                       "g": 9.81,
-                      "rho_air": 1.18,
+                      "rho_air": 1.23, # ca 15°C
                       "drs_factor": 0.0},
           "engine": {"topology": "AWD",
-                     "pow_e_motor": 300e3,
+                     "pow_e_motor": 270e3,
                      "eta_e_motor": 0.9,
-                     "eta_e_motor_re": 0.9,
-                     "torque_e_motor_max": 400.0},
-          "gearbox": {"i_trans": [0.055, 0.15],
-                      "n_shift": [19000.0, 19000.0],
+                     "eta_e_motor_re": 0.8,
+                     "torque_e_motor_max": 400.0}, # estimated
+          "gearbox": {"i_trans": [0.066, 0.107],  #  Die Übersetzung variiert zwischen 9,3:1 und 14,2:1 (ohne Hinterachslenkung 15,5:1) lt. AMS
+                      "n_shift": [16000.0, 16000.0],
                       "e_i": [1.04, 1.04],
                       "eta_g": 0.96},
-          "tires": {"f": {"circ_ref": 2.3,
+          "tires": {"f": {"circ_ref": 2.26,
                           "fz_0": 4500.0,
-                          "mux": 1.22,
-                          "muy": 1.22,
+                          "mux": 1.12,
+                          "muy": 1.12,
                           "dmux_dfz": -2.5e-5,
                           "dmuy_dfz": -2.5e-5},
-                    "r": {"circ_ref": 2.168,
-                          "fz_0": 2500.0,
+                    "r": {"circ_ref": 2.3,
+                          "fz_0": 4500.0,
                           "mux": 1.12,
                           "muy": 1.12,
                           "dmux_dfz": -2.0e-5,
                           "dmuy_dfz": -2.0e-5},
                     "tire_model_exp": 2.0}}
+
+'{"powertrain_type": "electric",\n"general": {"lf": 1.906,\n"lr": 1.194,\n"h_cog": 0.345,\n"sf": 1.9,\n"sr": 1.9,\n"m": 2400.0,\n"f_roll": 0.01, # according to COC\n"c_w_a": 0.51,  # 0,22 x 2,33m^2\n"c_z_a_f": 0.0, # kein Abtrieb\n"c_z_a_r": 0.0,\n"g": 9.81,\n"rho_air": 1.23, # ca 15°C\n"drs_factor": 0.0},\n"engine": {"topology": "AWD",\n"pow_e_motor": 270e3,\n"eta_e_motor": 0.9,\n"eta_e_motor_re": 0.8,\n"torque_e_motor_max": 400.0}, # estimated\n"gearbox": {"i_trans": [0.066, 0.107],  #  Die Übersetzung variiert zwischen 9,3:1 und 14,2:1 (ohne Hinterachslenkung 15,5:1) lt. AMS\n"n_shift": [16000.0, 16000.0],\n"e_i": [1.04, 1.04],\n"eta_g": 0.96},\n"tires": {"f": {"circ_ref": 2.26,\n"fz_0": 4500.0,\n"mux": 1.12,\n"muy": 1.12,\n"dmux_dfz": -2.5e-5,\n"dmuy_dfz": -2.5e-5},\n"r": {"circ_ref": 2.3,\n"fz_0": 4500.0,\n"mux": 1.12,\n"muy": 1.12,\n"dmux_dfz": -2.0e-5,\n"dmuy_dfz": -2.0e-5},\n"tire_model_exp": 2.0}}'
+'{"powertrain_type": "electric",\n"general": {"lf": 1.906,\n"lr": 1.194,\n"h_cog": 0.345,\n"sf": 1.9,\n"sr": 1.9,\n"m": 2400.0,\n"f_roll": 0.01, \n"c_w_a": 0.51,  \n"c_z_a_f": 0.0, \n"c_z_a_r": 0.0,\n"g": 9.81,\n"rho_air": 1.23, \n"drs_factor": 0.0},\n"engine": {"topology": "AWD",\n"pow_e_motor": 270e3,\n"eta_e_motor": 0.9,\n"eta_e_motor_re": 0.8,\n"torque_e_motor_max": 400.0}, \n"gearbox": {"i_trans": [0.066, 0.107],  \n"n_shift": [16000.0, 16000.0],\n"e_i": [1.04, 1.04],\n"eta_g": 0.96},\n"tires": {"f": {"circ_ref": 2.26,\n"fz_0": 4500.0,\n"mux": 1.12,\n"muy": 1.12,\n"dmux_dfz": -2.5e-5,\n"dmuy_dfz": -2.5e-5},\n"r": {"circ_ref": 2.3,\n"fz_0": 4500.0,\n"mux": 1.12,\n"muy": 1.12,\n"dmux_dfz": -2.0e-5,\n"dmuy_dfz": -2.0e-5},\n"tire_model_exp": 2.0}}'
