--- a/laptimesim/input/vehicles/BEV_Taycan.ini
+++ b/laptimesim/input/vehicles/BEV_Taycan.ini
@@ -39,12 +39,12 @@
 # tire_model_exp:               [-] exponent used in the tire model to adjust shape of friction "circle" -> [1.0, 2.0]
 
 veh_pars={"powertrain_type": "electric",
-          "general": {"lf": 1.906,
-                      "lr": 1.194,
+          "general": {"lf": 1.406, # Radstand ist 2,9m, leicht frontlastig
+                      "lr": 1.504,
                       "h_cog": 0.345,
-                      "sf": 1.9,
+                      "sf": 1.9, # Spurbreite
                       "sr": 1.9,
-                      "m": 2400.0,
+                      "m": 2400.0, # je nach Ausstattung auch mehr (mein Wagen: 2305kg) plus Fahrer (84kg)
                       "f_roll": 0.01, # according to COC
                       "c_w_a": 0.51,  # 0,22 x 2,33m^2
                       "c_z_a_f": 0.0, # kein Abtrieb
@@ -53,22 +53,22 @@ veh_pars={"powertrain_type": "electric",
                       "rho_air": 1.23, # ca 15°C
                       "drs_factor": 0.0},
           "engine": {"topology": "AWD",
-                     "pow_e_motor": 270e3,
+                     "pow_e_motor": 290e3, # 270kW Begrenzung
                      "eta_e_motor": 0.9,
-                     "eta_e_motor_re": 0.8,
+                     "eta_e_motor_re": 0.8, # 80 vH Rekuperation testen auf plausible Werte
                      "torque_e_motor_max": 400.0}, # estimated
-          "gearbox": {"i_trans": [0.066, 0.107],  #  Die Übersetzung variiert zwischen 9,3:1 und 14,2:1 (ohne Hinterachslenkung 15,5:1) lt. AMS
+          "gearbox": {"i_trans": [0.056, 0.127],  #  Die Übersetzung variiert zwischen 9,3:1 und 14,2:1 (ohne Hinterachslenkung 15,5:1) lt. AMS
                       "n_shift": [16000.0, 16000.0],
                       "e_i": [1.04, 1.04],
                       "eta_g": 0.96},
-          "tires": {"f": {"circ_ref": 2.26,
-                          "fz_0": 4500.0,
-                          "mux": 1.12,
+          "tires": {"f": {"circ_ref": 2.26, # Umfang 285/40 R20
+                          "fz_0": 5950.0,
+                          "mux": 1.12,  #  normal UHP tires
                           "muy": 1.12,
                           "dmux_dfz": -2.5e-5,
                           "dmuy_dfz": -2.5e-5},
                     "r": {"circ_ref": 2.3,
-                          "fz_0": 4500.0,
+                          "fz_0": 5800.0,
                           "mux": 1.12,
                           "muy": 1.12,
                           "dmux_dfz": -2.0e-5,
