added longi acc plot postive+negative power plot etc

--- a/laptimesim/input/vehicles/BEV_Taycan.ini
+++ b/laptimesim/input/vehicles/BEV_Taycan.ini
@@ -53,7 +53,8 @@ veh_pars={"powertrain_type": "electric",
                       "rho_air": 1.23, # ca 15°C
                       "drs_factor": 0.0},
           "engine": {"topology": "AWD",
-                     "pow_e_motor": 270e3, # 270kW Begrenzung
+                     "pow_e_motor": 470e3, 
+                     "pow_e_recu": 200e3, # 290kW
                      "eta_e_motor": 0.9,
                      "eta_e_motor_re": 0.8, # 80 vH Rekuperation testen auf plausible Werte
                      "torque_e_motor_max": 400.0}, # estimated
