--- a/laptimesim/input/vehicles/BEV_Taycan.ini
+++ b/laptimesim/input/vehicles/BEV_Taycan.ini
@@ -45,7 +45,7 @@ veh_pars={"powertrain_type": "electric",
                       "sf": 1.9, # Spurbreite
                       "sr": 1.9,
                       "m": 2400.0, # je nach Ausstattung auch mehr (mein Wagen: 2305kg) plus Fahrer (84kg)
-                      "f_roll": 0.015, # according to COC plus 0.05 for tires
+                      "f_roll": 0.025, # according to COC plus 0.05 for tires
                       "c_w_a": 0.51,  # 0,22 x 2,33m^2
                       "c_z_a_f": 0.0, # kein Abtrieb
                       "c_z_a_r": 0.0,
@@ -54,7 +54,8 @@ veh_pars={"powertrain_type": "electric",
                       "drs_factor": 0.0},
           "engine": {"topology": "AWD",
                      "pow_e_motor": 470e3, 
-                     "pow_e_recu": 200e3, # 290kW
+                     "pow_e_recu": 270e3, # 290kW
+                     "pow_standby": 2700, # 800W Standbyverbrauch zeitkonstant ohne Klima
                      "eta_e_motor": 0.9,
                      "eta_e_motor_re": 0.8, # 80 vH Rekuperation testen auf plausible Werte
                      "torque_e_motor_max": 400.0}, # estimated
