--- a/laptimesim/input/tracks/track_pars.ini
+++ b/laptimesim/input/tracks/track_pars.ini
@@ -179,4 +179,49 @@ track_pars={"Austin": {"s12": 2000.0,
                          "drs2_deact": 0.0,
                          "pitspeed": 22.222,
                          "pit_in": 0.0,
-                         "pit_out": 0.0}}
+                         "pit_out": 0.0},
+        "test": {"s12": 100.0,
+                "s23": 200.0,
+                "mu_mean": 1.0,
+                "drs1_act": 500.0,
+                "drs1_deact": 1000.0,
+                "drs2_act": 2000.0,
+                "drs2_deact": 500.0,
+                "pitspeed": 22.222,
+                "pit_in": 1000.0,
+                "pit_out": 500.0},
+
+        "Neuss": {"s12": 200.0,
+                "s23": 450.0,
+                "mu_mean": 1.0,
+                 "drs1_act": 0.0,
+                "drs1_deact": 0.0,
+                "drs2_act": 0.0,
+                "drs2_deact": 0.0,
+                "pitspeed": 22.222,
+                "pit_in": 1000.0,
+                "pit_out": 500.0},
+
+        "Duisburg": {"s12": 700.0,
+                "s23": 1400.0,
+                "mu_mean": 1.0,
+                 "drs1_act": 0.0,
+                "drs1_deact": 0.0,
+                "drs2_act": 0.0,
+                "drs2_deact": 0.0,
+                "pitspeed": 22.222,
+                "pit_in": 1000.0,
+                "pit_out": 500.0},
+                
+              "Leipzig": {"s12": 1500.0,
+                "s23": 3000.0,
+                "mu_mean": 1.0,
+                 "drs1_act": 0.0,
+                "drs1_deact": 0.0,
+                "drs2_act": 0.0,
+                "drs2_deact": 0.0,
+                "pitspeed": 22.222,
+                "pit_in": 1000.0,
+                "pit_out": 500.0}}
+       
+                
