start finish line aligned

--- a/laptimesim/input/vehicles/BEV_Taycan.ini
+++ b/laptimesim/input/vehicles/BEV_Taycan.ini
@@ -45,15 +45,15 @@ veh_pars={"powertrain_type": "electric",
                       "sf": 1.9, # Spurbreite
                       "sr": 1.9,
                       "m": 2400.0, # je nach Ausstattung auch mehr (mein Wagen: 2305kg) plus Fahrer (84kg)
-                      "f_roll": 0.025, # according to COC plus 0.05 for tires
-                      "c_w_a": 0.51,  # 0,22 x 2,33m^2
+                      "f_roll": 0.020, # according to COC plus 0.05 for tires
+                      "c_w_a": 0.54,  # 0,22 x 2,33m^2 : etwas mehr für quadratische Zunahme der Rollreibung und Lüftung
                       "c_z_a_f": 0.0, # kein Abtrieb
                       "c_z_a_r": 0.0,
                       "g": 9.81,
                       "rho_air": 1.23, # ca 15°C
                       "drs_factor": 0.0},
           "engine": {"topology": "AWD",
-                     "pow_e_motor": 470e3, 
+                     "pow_e_motor": 370e3, 
                      "pow_e_recu": 270e3, # 290kW
                      "pow_standby": 2700, # 800W Standbyverbrauch zeitkonstant ohne Klima
                      "eta_e_motor": 0.9,
