--- a/laptimesim/input/tracks/track_pars.ini
+++ b/laptimesim/input/tracks/track_pars.ini
@@ -213,8 +213,19 @@ track_pars={"Austin": {"s12": 2000.0,
                 "pit_in": 1000.0,
                 "pit_out": 500.0},
                 
-              "Leipzig": {"s12": 1500.0,
+         "Leipzig": {"s12": 1500.0,
                 "s23": 2500.0,
+                "mu_mean": 1.0,
+                "drs1_act": 0.0,
+                "drs1_deact": 0.0,
+                "drs2_act": 0.0,
+                "drs2_deact": 0.0,
+                "pitspeed": 22.222,
+                "pit_in": 0.0,
+                "pit_out":0.0},
+
+        "Nuerburgring": {"s12": 700.0,
+                "s23": 1400.0,
                 "mu_mean": 1.0,
                  "drs1_act": 0.0,
                 "drs1_deact": 0.0,
