--- a/laptimesim/input/vehicles/BEV_Taycan.ini
+++ b/laptimesim/input/vehicles/BEV_Taycan.ini
@@ -65,13 +65,13 @@ veh_pars={"powertrain_type": "electric",
                       "eta_g": 0.96},
           "tires": {"f": {"circ_ref": 2.26, # Umfang 285/40 R20
                           "fz_0": 5950.0,
-                          "mux": 1.12,  #  normal UHP tires
-                          "muy": 1.12,
+                          "mux": 0.42,  # limitiert um möglichst viel Bremsenergie zu rekuperieren
+                          "muy": 1.12, #  normal UHP tires
                           "dmux_dfz": -2.5e-5,
                           "dmuy_dfz": -2.5e-5},
                     "r": {"circ_ref": 2.3,
                           "fz_0": 5800.0,
-                          "mux": 1.12,
+                          "mux": 0.42,  # limitiert um möglichst viel Bremsenergie zu rekuperieren
                           "muy": 1.12,
                           "dmux_dfz": -2.0e-5,
                           "dmuy_dfz": -2.0e-5},
