--- a/laptimesim/input/vehicles/BEV_Taycan.ini
+++ b/laptimesim/input/vehicles/BEV_Taycan.ini
@@ -53,25 +53,25 @@ veh_pars={"powertrain_type": "electric",
                       "rho_air": 1.23, # ca 15°C
                       "drs_factor": 0.0},
           "engine": {"topology": "AWD",
-                     "pow_e_motor": 370e3, 
+                     "pow_e_motor": 480e3, 
                      "pow_e_recu": 270e3, # 290kW
-                     "pow_standby": 2700, # 800W Standbyverbrauch zeitkonstant ohne Klima
+                     "pow_standby": 3000, # 800W Standbyverbrauch zeitkonstant plus Klima
                      "eta_e_motor": 0.9,
                      "eta_e_motor_re": 0.8, # 80 vH Rekuperation testen auf plausible Werte
-                     "torque_e_motor_max": 400.0}, # estimated
+                     "torque_e_motor_max": 450.0}, # estimated
           "gearbox": {"i_trans": [0.056, 0.127],  #  Die Übersetzung variiert zwischen 9,3:1 und 14,2:1 (ohne Hinterachslenkung 15,5:1) lt. AMS
                       "n_shift": [16000.0, 16000.0],
                       "e_i": [1.04, 1.04],
                       "eta_g": 0.96},
           "tires": {"f": {"circ_ref": 2.26, # Umfang 285/40 R20
                           "fz_0": 5950.0,
-                          "mux": 0.42,  # limitiert um möglichst viel Bremsenergie zu rekuperieren
+                          "mux": 0.5,  # limitiert um möglichst viel Bremsenergie zu rekuperieren
                           "muy": 1.12, #  normal UHP tires
                           "dmux_dfz": -2.5e-5,
                           "dmuy_dfz": -2.5e-5},
                     "r": {"circ_ref": 2.3,
                           "fz_0": 5800.0,
-                          "mux": 0.42,  # limitiert um möglichst viel Bremsenergie zu rekuperieren
+                          "mux": 0.5,  # limitiert um möglichst viel Bremsenergie zu rekuperieren
                           "muy": 1.12,
                           "dmux_dfz": -2.0e-5,
                           "dmuy_dfz": -2.0e-5},
