--- a/laptimesim/input/vehicles/FE_Berlin.ini
+++ b/laptimesim/input/vehicles/FE_Berlin.ini
@@ -55,6 +55,7 @@ veh_pars={"powertrain_type": "electric",
           "engine": {"topology": "RWD",
                      "pow_e_motor": 200e3,
                      "eta_e_motor": 0.9,
+                     "pow_standby": 1000,
                      "eta_e_motor_re": 0.9,
                      "torque_e_motor_max": 150.0},
           "gearbox": {"i_trans": [0.056, 0.091],
