--- a/laptimesim/input/vehicles/F1_Shanghai.ini
+++ b/laptimesim/input/vehicles/F1_Shanghai.ini
@@ -63,11 +63,13 @@ veh_pars={"powertrain_type": "hybrid",
           "engine": {"topology": "RWD",
                      "pow_max": 575e3,
                      "pow_diff": 41e3,
+                     "pow_standby": 3000,
                      "n_begin": 10500.0,
                      "n_max": 11400.0,
                      "n_end": 12200.0,
                      "be_max": 100.0,
                      "pow_e_motor": 120e3,
+                     "pow_e_recu": 170e3,
                      "eta_e_motor": 0.9,
                      "eta_e_motor_re": 0.15,
                      "eta_etc_re": 0.10,
